# BLCaptain-Codex-Probe-CLI

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CODEX_DESKTOP_PROMPT.md  INSTALL.md  MACOS_MENUBAR_APP.md  MACOS_MENUBAR_GOAL.md  MACOS_RELEASE_DISTRIBUTION.md  MACOS_WATCHER.md  MENUBAR_OR_DESKTOP_EVAL.md  PRIVACY_SECURITY.md  RELEASE_CHECKLIST.md  SAMPLE_COLLECTION.md  SOCIAL_POSTS.md
examples/: clean-skill.md  manual-usage.json  optimized-skill.md  risky-skill.md  status-codex-desktop.txt  status.txt
examples/ledger-samples/: README.md  local-status-snapshots.json  official-export-alt.json  official-export-alt.mapping.json  official-export.csv  official-export.json  official-export.jsonl  snapshot-delta.json
examples/reports/: optimized-skill-lint-report.md  skill-lint-report.md  usage-report.md
examples/status-samples/: README.md  codex-desktop-context-near-limit.txt  codex-desktop-healthy.txt  codex-desktop-weekly-low.txt  english-fast-mode.txt
scripts/: run_acceptance.py  setup-local.sh
scripts/macos/: build-codex-probe-bar.sh  install-watcher-launchagent.sh  notarize-codex-probe-bar.sh  package-codex-probe-bar.sh  preflight-codex-probe-bar.sh  sign-codex-probe-bar.sh  uninstall-watcher-launchagent.sh
src/codex_usage_skill_probe/: __init__.py  (+17 more)
tasks/: lessons.md  todo.md
tests/: test_cli_e2e.py  test_ledger.py  test_macos_menubar_app.py  test_macos_release_distribution.py  test_privacy.py  test_report_contracts.py  test_skill_linter.py  test_usage_analyzer.py  test_usage_parser.py
(+19 files in other folders)
