[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blcaptain-codex-probe"
version = "0.3.2"
description = "本地只读的 Codex 用量治理与 Skill 输出体检 CLI。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BLTeam" }]
keywords = ["blcaptain", "codex", "cli", "usage", "skills", "privacy", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
blcaptain-codex-probe = "codex_usage_skill_probe.cli:main"
codex-probe = "codex_usage_skill_probe.cli:main"
probe = "codex_usage_skill_probe.cli:main"
codex-usage-skill-probe = "codex_usage_skill_probe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
